--- a/package.json
+++ b/package.json
@@ -59,7 +59,15 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "wagmi": "^2.0.0",
+    "viem": "^2.0.0",
+    "@rainbow-me/rainbowkit": "^2.0.0",
+    "@solana/web3.js": "^1.87.0",
+    "@solana/wallet-adapter-react": "^0.15.0",
+    "@solana/wallet-adapter-react-ui": "^0.9.0",
+    "@solana/wallet-adapter-wallets": "^0.19.0",
+    "@tanstack/react-query": "^5.0.0"
   },
   "devDependencies": {
     "@types/d3-scale": "^4.0.8",
