--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "build": "tsx db/migrate && next build",
     "start": "next start",
     "lint": "next lint",
-    "db:introspect": "drizzle-kit introspect --config=drizzle-external.config.ts",
-    "db:generate": "drizzle-kit generate --config=drizzle-external.config.ts",
-    "db:migrate:external": "drizzle-kit migrate --config=drizzle-external.config.ts",
+    "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
+    "db:migrate": "drizzle-kit migrate --config=drizzle.config.ts",
     "db:delete-all-chats": "tsx db/delete-all-chats.ts"
   },
   "dependencies": {
