--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "mermaid": "^11.12.0",
-    "next": "15.0.0-canary.152",
+    "next": "15.0.7",
     "next-auth": "5.0.0-beta.22",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
